<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    android:id="@+id/nav_menu"
    >

    <group
         android:checkableBehavior="single"
         android:background="@color/gray"
        >

           <item
                android:id="@+id/home"
               android:title=" Home "
               android:icon="@drawable/ic_home"
               app:iconTint="@color/purple"
               tools:targetApi="o" />



        <item
            android:id="@+id/fav"
            android:title="@string/fav"
            android:icon="@drawable/ic_favorite_on_red"
            app:iconTint="#D51020"
            />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting_24"
            android:title="@string/s"
            app:iconTint="#187ED8"

            />

        <item
            android:id="@+id/archive"
            android:title="@string/arch"
            android:icon="@drawable/ic_archive_yellow"
            app:iconTint="#DAD715"
            />

    </group>

</menu>