<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="ui.UpDateActivity">


    <ImageButton
        android:id="@+id/iv_done_button_update"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/main_background"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/iv_archive_button_update"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_background"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_archive_yellow"
        app:layout_constraintEnd_toStartOf="@+id/iv_done_button_update"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/iv_fav_update"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_background"
        android:clickable="true"
        android:contentDescription="@string/favorite_button"
        android:focusable="true"
        android:src="@drawable/ic_favorite_off_red"
        app:layout_constraintEnd_toStartOf="@+id/iv_archive_button_update"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/iv_back_button_update"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/main_background"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:elevation="20dp"
        android:fontFamily="@font/slkscrb"
        android:shadowColor="#F8F4F4"
        android:shadowDx="2"
        android:shadowDy="2"
        android:text="@string/lebol"
        android:textColor="#9584DC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_button_update" />

    <EditText
        android:id="@+id/et_title_update"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/title2"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1"
        android:textColor="#A3A5A5"
        android:textColorHint="#555757"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/et_note_update"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:gravity="top"
        android:hint="@string/write_some_thing"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#A3A5A5"
        android:textColorHint="#555757"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_upDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title_update" />

    <TextView
        android:id="@+id/tv_date_upDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>